# wireforge

./: .gitignore  .wireforge_terminal_history  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.opencode/: README.md  opencode.json
agent_protocol/: __init__.py  message_examples.py  protocol_map.py  state_machine.py
compiled/: csg_2016.ir.json  dlt645_2007.ir.json  ng_2019.ir.json
console/: __init__.py  api.py  arg_utils.py  build_completion.py  build_resolver.py  command.py  command_schema.py  commands.json  completion.py  display.py  handler.py  ndjson.py  protocol.py  render.py  response.py  result.py  runtime.py  schema_validate.py  session.py  terminal.py  theme.json  tui.py  variable_store.py
doc_parser/: __init__.py  chunk_messages.py  di_catalog.py  document_ir.py  enrich_sections.py  metadata_extractor.py  normalize_table.py  parse_docx.py
extractor/: __init__.py  enum_extractor.py  extension_draft.py  field_extractor.py  message_extractor.py
knowledge_base/: __init__.py  store.py
lab_service/: __init__.py  rpc.py  service.py
mcp_servers/: __init__.py
protocol_extend/: __init__.py  candidate.py  dlt645_funcs.py  document_pipeline.py  domain_types.py  evidence_parser.py  fidelity_checker.py  fields.py  map_verify.py  parser.py  profiles.py  run_log.py  schema.py  schema_csg.py  semantic_validator.py  source_snapshot.py  state_machine.py  type_inferencer.py  validator.py  yaml_writer.py
protocol_tool/: __init__.py
runtime/: command_runtime.py
scripts/: bootstrap_protocol_cache.py  build_commands_tree.py  compare_afn07_upg_with_old.py  generate_commands_reference.py  generate_csg_variants_from_c_struct.py  generate_pair_serial_plans.py  generate_protocol_map.py  migrate_afn_payloads_to_c_struct.py  run_csg_full_pair_test.py  run_dlt645_full_pair_test.py  run_pair_serial_test.py
src/: tui.ts
(+404 files in other folders)
