[project]
name = "protocol-tool"
version = "0.1.0"
description = "Protocol parsing and construction framework — YAML to IR compiler + unified runtime"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "outlierli" }
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
protocolctl = "protocol_tool.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protocol_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
