[project]
name = "protocol-tool"
version = "0.1.0"
description = "Protocol parsing and construction framework — YAML to IR compiler + unified runtime"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "outlierli" }
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9",
    "prompt_toolkit>=3.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
protocolctl = "protocol_tool.cli.main:app"
wireforge-terminal = "console.terminal:main"
wireforge-mcp-server = "mcp_servers.protocol.server:main"
wireforge-test-mcp-server = "mcp_servers.test.server:main"
wireforge-extend-mcp-server = "mcp_servers.extend.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["protocol_tool", "console", "wireforge_serial", "agent_protocol", "protocol_extend", "mcp_servers", "test_runner", "runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
